--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: sans-serif;
+  background: #fffafa;
+  font-size: 12px;
+}
+
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+  font-size: inherit;
 }
