--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   background-color: #242331;
   padding-top: 3px;
   height: 50px;
+  min-height: 50px;
   width: 100%;
   color: #fffafa;
   opacity: 0.8;
@@ -35,14 +36,10 @@
   left: 20px;
   width: 100px;
   height: 50px;
-  text-align: center;
-  line-height: 50px;
-  font-weight: bold;
-  transition: color 0.35s;
 }
 
-.app-header-logo:hover {
-  color: #67d38f;
+.header-logo {
+  height: 50px;
 }
 
 .app-login-nav {
@@ -71,11 +68,26 @@
 .login-icon {
   margin: 0 10px 0 0;
 }
+
 .app-footer {
   background-color: #242331;
   height: 50px;
+  min-height: 50px;
   width: 100%;
   color: #fffafa;
+  text-align: center;
+}
+
+.app-footer-link {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0 20px;
+  line-height: 50px;
+  transition: color 0.35s;
+}
+
+.app-footer-link:hover {
+  color: #67d38f;
 }
 
 .app-header-logo {
@@ -84,7 +96,9 @@
 }
 
 .app-container {
-  padding-top: 100px;
   font-size: 12px;
-  flex: 1 1 auto;
+  flex-grow: 1;
+  max-width: 100%;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
